# occhi-central

./: README.md  config.json  pyproject.toml
occhi_central/: config.py  gatt_profile.py  main.py  mqtt.py  translator.py
occhi_central/ble_services/: advertisement.py  ble_service.py
